Highlighted CPU choice
when user selects, the modal opens and the cpu selection gets highlighted letting the user know what the cpu's choice was.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
     <div class="cpu--choice">
       <h1 class="cpu--title">CPU</h1>
-      <div class="rock--cpu ">👊</div>
-      <div class="scissors--cpu ">✌</div>
-      <div class="paper--cpu ">✋</div>
+      <div class="rock--cpu highlight">👊</div>
+      <div class="scissors--cpu highlight">✌</div>
+      <div class="paper--cpu highlight">✋</div>
     </div>
     <div class="modal hidden">
       <button class="close">&times;</button>
