--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <div class="spacer"></div>
       <div class="player--score" id="p-score">00</div>
     </div>
+    <h1 class="player--title">Player</h1>
     <div class="player--btns">
-      <h1 class="player--title">Player</h1>
-      <button class="rock--btn">👊</button>
-      <button class="scissors--btn">✌</button>
-      <button class="paper--btn">✋</button>
+        <button class="rock--btn">👊</button>
+        <button class="scissors--btn">✌</button>
+        <button class="paper--btn">✋</button>
     </div>
 
     <div class="cpu">
@@ -31,8 +31,8 @@
       <div class="spacer"></div>
       <div class="cpu--score" id="c-score">00</div>
     </div>
+    <h1 class="cpu--title">CPU</h1>
     <div class="cpu--choice">
-      <h1 class="cpu--title">CPU</h1>
       <div class="rock--cpu highlight">👊</div>
       <div class="scissors--cpu highlight">✌</div>
       <div class="paper--cpu highlight">✋</div>
@@ -41,7 +41,9 @@
       <button class="close">&times;</button>
       <h1 id="win-quote">Winner!</h1>
     </div>
+    <div class="resetBtn"></div>
     <script src="script.js"></script>
+  
   </body>
-</div>
+
 </html>
